[package]
name = "ibp-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
uapi = { package = "pallet-revive-uapi", version = "0.7", default-features = false }
polkavm-derive = "0.29.0"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "implementation"
path = "src/implementation.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
